--- a/Actas/2024-11-19.md
+++ b/Actas/2024-11-19.md
@@ -2,7 +2,7 @@
 
 ## Lista de Traballos realizados
 1. Elba realizou un pequeno proxecto como base simulando o dinosaurio de Chrome a partir do cal podemos traballar
-2. José estivo investigando sobre como engadir funcionalidades con scripts en C# para ir complementando o Xogoç
+2. José estivo investigando sobre como engadir funcionalidades con scripts en C# para ir complementando o Xogo
 
 ## Instruccións a Seguir
 1. Elba realizar un personaxe distinto ao dinosaurio, imos ser orixinais
