Engadir a creación dun cronograma as actas

--- a/Actas/2024-11-20.md
+++ b/Actas/2024-11-20.md
@@ -4,3 +4,10 @@
 ## Cambios a realizar   
 2. Elba empezará por crear un proxecto vació sobre o que vamos traballar
 3. Pasarán a crear un personaxe e o mapa
+
+## Funcións a engadir
+1. Crear un cronograma
+    + 1ra semana: Creación do nivel e o movemento do personaxe.
+    + 2nda semana: Engadir novas mecánicas ao personaxe.
+    + 3ra semana: Engadir power ups e sistema de puntuación.
+    + 4ta semana: Probas e testing finais, engadidos extra.
