Corrección no primeiro deseño do cronograma

--- a/Actas/2024-11-20.md
+++ b/Actas/2024-11-20.md
@@ -9,5 +9,5 @@
 1. Crear un cronograma
     + 1ra semana: Creación do nivel e o movemento do personaxe.
     + 2nda semana: Engadir novas mecánicas ao personaxe.
-    + 3ra semana: Engadir power ups e sistema de puntuación.
+    + 3ra semana: Engadir power ups,sistema de puntuación e interfaz .
     + 4ta semana: Probas e testing finais, engadidos extra.
